--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,21 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="12dp"
     android:background="@color/black_brown"
+    android:padding="12dp"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardviewFemale"
         android:layout_width="0dp"
         android:layout_height="150dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/background_cardview"
+        android:clickable="true"
+        android:focusable="true"
         app:cardCornerRadius="16dp"
         app:layout_constraintEnd_toStartOf="@+id/cardviewMale"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:clickable="true">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
@@ -30,17 +31,16 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:src="@drawable/ic_female"
-                app:tint="@color/title_text"
-                 />
+                app:tint="@color/title_text" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="@string/female"
                 android:textAllCaps="true"
                 android:textColor="@color/title_text"
-                android:textSize="24sp"
-                android:layout_marginTop="8dp"/>
+                android:textSize="24sp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
 
@@ -67,10 +67,10 @@
             <ImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/ic_male"
                 android:layout_gravity="center"
-                app:tint="@color/title_text"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="8dp"
+                android:src="@drawable/ic_male"
+                app:tint="@color/title_text" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -96,6 +96,40 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardviewFemale">
 
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/height"
+                android:textAllCaps="true"
+                android:textSize="20sp" />
+
+
+            <TextView
+                android:id="@+id/tvSetHeight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="120"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                android:textSize="32sp" />
+
+
+            <com.google.android.material.slider.RangeSlider
+                android:id="@+id/rsSetHeight"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:stepSize="1"
+                android:valueFrom="120"
+                android:valueTo="250" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
     </androidx.cardview.widget.CardView>
 
 
@@ -104,13 +138,50 @@
         android:layout_width="0dp"
         android:layout_height="150dp"
         android:layout_marginTop="32dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
         android:background="@color/black"
         android:backgroundTint="@color/background_cardview"
         app:cardCornerRadius="16dp"
         app:layout_constraintEnd_toStartOf="@id/cardviewAge"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardviewHeight">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/weight"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+                <NumberPicker
+                    android:id="@+id/weightNumberPicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+
+            </LinearLayout>
+
+
+
+
+
+
+
+        </LinearLayout>
+
 
     </androidx.cardview.widget.CardView>
 
@@ -126,14 +197,47 @@
         app:layout_constraintStart_toEndOf="@id/cardviewWeight"
         app:layout_constraintTop_toBottomOf="@id/cardviewHeight">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/age"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+                <NumberPicker
+                    android:id="@+id/ageNumberPicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/appCompatButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/beige"
-        android:text="CALCULAR"
+        android:text="@string/calculate"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
