--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="black_brown">#333333</color>
     <color name="tanned">#c77c57</color>
     <color name="background_cardview">#6d6552</color>
-    <color name="selected_background_cardview">#a47642</color>
+    <color name="selected_background_cardview">#f17849</color>
     <color name="title_text">#FFFFFFFF</color>
 
 
