--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,14 +111,33 @@
                 android:textSize="20sp" />
 
 
-            <TextView
-                android:id="@+id/tvSetHeight"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="120"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="32sp" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvSetHeight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/setNumberOfHeight"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="32sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/setCM"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="32sp"
+                    android:layout_marginStart="10dp"/>
+
+
+            </LinearLayout>
+
+
 
 
             <com.google.android.material.slider.RangeSlider
